cabal-version:      3.0
name:               advent-of-code-y2024
version:            0.1.0.0

license:            BSD-3-Clause
license-file:       LICENSE

author:             clatisus
maintainer:         clatisus@gmail.com

common warnings
    ghc-options: -Wall

executable advent-of-code-y2024
    import:           warnings
    main-is:          Main.hs
    other-modules:
    build-depends:    base ^>=4.18.3.0
    hs-source-dirs:   app, src
    default-language: Haskell2010
