cabal-version:      3.0
name:               advent-of-code-y2024
version:            0.1.0.0

license:            BSD-3-Clause
license-file:       LICENSE

author:             clatisus
maintainer:         clatisus@gmail.com

common warnings
  ghc-options: -Wall

executable advent-of-code-y2024
  import:           warnings
  main-is:          Main.hs
  other-modules:
    Day1
    Day2
    Day3
    Day4
    Day5
    Day6
    Day7
    Day8
  build-depends:    base ^>=4.18.3.0, split, regex-tdfa, containers, vector
  hs-source-dirs:   app, src
  default-language: Haskell2010
